Webpage Responsiveness Completed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="https://kit.fontawesome.com/1e74b473dc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./asset/css/style.css">
     <title>Product Design Landing Page</title>
 </head>
 
@@ -16,7 +15,7 @@
 
         <!-- ---Navbar Sub-Section --------- -->
         <nav>
-            <img src="./images/logo.svg" alt="logo" class="logo">
+            <img src="./asset/images/logo.svg" alt="logo" class="logo">
             <div class="list">
                 <a class="list-item"> HOME ▼</a>
                 <a href="#" class="list-item">PROJECT</a>
@@ -24,12 +23,13 @@
                 <a href="#" class="list-item">CONTACT</a>
                 <a class="list-item"> OTHER PAGE ▼</a>
             </div>
+            <img src="./asset/images/ham-burger.svg" alt="ham-burger" class="ham-burger">
         </nav>
 
         <!-- ---------Home Sub-Section ---------- -->
 
         <div class="home-container">
-            <img src="./images/person.png" alt="profile pic" class="profile-pic">
+            <img src="./asset/images/person.png" alt="profile pic" class="profile-pic">
             <div class="home-content">
                 <h3>Hello I'm Arthur</h3>
                 <h1>Visual Designer</h1>
@@ -47,19 +47,19 @@
             <!-- ---------Project Sub-Section-------- -->
             <div class="project-cards">
                 <div class="project-card">
-                    <img src="./images/ui.svg" alt="ui-design">
+                    <img src="./asset/images/ui.svg" alt="ui-design">
                     <h2>UI Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <h4 class="know-more">KNOW MORE &rarr;</h4>
                 </div>
                 <div class="project-card">
-                    <img src="./images/product.svg" alt="product-design">
+                    <img src="./asset/images/product.svg" alt="product-design">
                     <h2>Product Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <h4 class="know-more">KNOW MORE &rarr;</h4>
                 </div>
                 <div class="project-card">
-                    <img src="./images/branding.svg" alt="branding">
+                    <img src="./asset/images/branding.svg" alt="branding">
                     <h2>Branding</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <h4 class="know-more">KNOW MORE &rarr;</h4>
@@ -109,7 +109,7 @@
         <div class="feature-cards">
             <div class="feature-card">
                 <div class="feature-img">
-                    <img src="./images/pic-1.jpg" alt="pic-1">
+                    <img src="./asset/images/pic-1.jpg" alt="pic-1">
                 </div>
                 <div class="feature-name">
                     <h2>The Vintage</h2>
@@ -117,14 +117,14 @@
                 </div>
             </div>
             <div class="feature-card">
-                <div class="feature-img"><img src="./images/pic-2.jpg" alt="pic-2"></div>
+                <div class="feature-img"><img src="./asset/images/pic-2.jpg" alt="pic-2"></div>
                 <div class="feature-name">
                     <h2>Foodasa</h2>
                     <p class="know-more">KNOW MORE →</p>
                 </div>
             </div>
             <div class="feature-card">
-                <div class="feature-img"><img src="./images/pic-3.jpg" alt="pic-3"></div>
+                <div class="feature-img"><img src="./asset/images/pic-3.jpg" alt="pic-3"></div>
                 <div class="feature-name">
                     <h2>Mozaik</h2>
                     <p class="know-more">KNOW MORE →</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-img">
-                    <img src="./images/pic-4.jpg" alt="project-4"></div>
+                    <img src="./asset/images/pic-4.jpg" alt="project-4"></div>
                 <div class="feature-name">
                     <h2>Marco Accent</h2>
                     <p class="know-more">KNOW MORE →</p>
@@ -164,11 +164,11 @@
         </div>
 
         <footer>
-            <img src="./images/logo.svg" alt="logo" class="bottom-logo">
+            <img src="./asset/images/logo.svg" alt="logo" class="bottom-logo">
             <div class="social-media">
-                <img src="./images/fb.svg" alt="fb">
-                <img src="./images/twitter.svg" alt="twitter">
-                <img src="./images/youtube.svg" alt="youtube">
+                <img src="./asset/images/fb.svg" alt="fb">
+                <img src="./asset/images/twitter.svg" alt="twitter">
+                <img src="./asset/images/youtube.svg" alt="youtube">
             </div>
         </footer>
     </div>
